<?xml version="1.0"?>
<package format="2">
  <name>roscpp_message_reflection</name>
  <version>0.0.0</version>
  <description>A collection of tools for dynamically examining and modifying ROS messages</description>

  <maintainer email="me@mitchellwills.com">Mitchell Wills</maintainer>
  <author email="me@mitchellwills.com">Mitchell Wills</author>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/roscpp_message_reflection</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp_serialization</depend>
  <depend>topic_tools</depend>
  <depend>cpp_common</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>roscpp_tutorials</test_depend>

  <export>
  </export>
</package>
